@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-28T00:28:16Z",
-  "count_outdated" : 2312,
-  "uniques_outdated" : 738,
-  "count" : 2393,
-  "uniques" : 756,
+  "timestamp" : "2024-02-28T16:07:41Z",
+  "count_outdated" : 2334,
+  "uniques_outdated" : 740,
+  "count" : 2398,
+  "uniques" : 757,
   "views" : [
-    {
-      "timestamp": "2024-02-14T00:00:00Z",
-      "count": 22,
-      "count_minmax": [ 21, 22 ],
-      "count_decinc": [ 0, 22 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-02-15T00:00:00Z",
       "count": 2,
@@ -109,6 +100,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-28T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
+      "count_decinc": [ 0, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
